--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#39495e</color>
     <color name="colorPrimaryDark">#2c3e54</color>
-    <color name="colorAccent">#2d556c</color>
+    <color name="colorAccent">#648da4</color>
 
     <color name="project_color">#ffffff</color>
     <color name="text_color">#39495e</color>
