--- a/app/src/main/res/layout/activity_meeting.xml
+++ b/app/src/main/res/layout/activity_meeting.xml
@@ -89,47 +89,76 @@
                     android:drawableRight="@drawable/ic_add_company"
                     style="?android:attr/borderlessButtonStyle"/>
             </LinearLayout>
-
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="me.originqiu.edittag.MainActivity">
+                android:padding="16dp"
+                >
 
-                <LinearLayout
+                <com.pchmn.materialchips.ChipsInput
+                    android:id="@+id/chips_input1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    app:hint="Enter a name"
+                    app:maxRows="3" />
 
-                    <me.originqiu.library.EditTag
-                        android:id="@+id/edit_tag_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:input_layout="@layout/view_sample_input_tag"
-                        app:tag_layout="@layout/view_sample_tag" />
+                <!--<Button-->
+                <!--android:id="@+id/validate"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="16dp"-->
+                <!--android:text="Validate"/>-->
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginTop="4dp"
-                        android:background="@color/colorAccent" />
-                </LinearLayout>
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/status_switch"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/chip_list1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:padding="16dp"
-                    android:text="open editable status" />
+                    android:layout_marginTop="16dp"/>
 
             </LinearLayout>
+            <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+                <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+                <!--xmlns:tools="http://schemas.android.com/tools"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="vertical"-->
+                <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+                <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+                <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+                <!--tools:context="me.originqiu.edittag.MainActivity">-->
+
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:orientation="vertical">-->
+
+                    <!--<me.originqiu.library.EditTag-->
+                        <!--android:id="@+id/edit_tag_view"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--app:input_layout="@layout/view_sample_input_tag"-->
+                        <!--app:tag_layout="@layout/view_sample_tag" />-->
+
+                    <!--<View-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="2dp"-->
+                        <!--android:layout_marginTop="4dp"-->
+                        <!--android:background="@color/colorAccent" />-->
+                <!--</LinearLayout>-->
+
+                <!--<android.support.v7.widget.SwitchCompat-->
+                    <!--android:id="@+id/status_switch"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:checked="true"-->
+                    <!--android:padding="16dp"-->
+                    <!--android:text="open editable status" />-->
+
+            <!--</LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
