--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -11,11 +11,12 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TimeLine" />
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/timeline_rv">
+
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 </FrameLayout>
