--- a/sample/src/main/res/layout/active_deals_details.xml
+++ b/sample/src/main/res/layout/active_deals_details.xml
@@ -108,10 +108,12 @@
         app:tabBackground="@color/colorPrimary"
         app:tabIndicatorColor="@color/pink"
         app:tabIndicatorHeight="3dp"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
         app:tabSelectedTextColor="@color/project_color"
         app:tabTextColor="@color/gray">
 
-        <android.support.design.widget.TabItem
+        <!--<android.support.design.widget.TabItem
             android:id="@+id/deal_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -134,15 +136,20 @@
             android:id="@+id/requirements"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_requirements"/>
+            android:icon="@drawable/ic_requirements"/>-->
 
     </android.support.design.widget.TabLayout>
-<fragment
+<!--<fragment
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/dealinfo_fragment"
     class="com.woxthebox.draglistview.sample.DealInfoFragment">
 
-</fragment>
+</fragment>-->
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/deal_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
