--- a/sample/src/main/res/layout/column_item.xml
+++ b/sample/src/main/res/layout/column_item.xml
@@ -105,7 +105,7 @@
                         android:src="@drawable/ic_owner" />
 
                     <TextView
-                        android:id="@+id/text"
+                        android:id="@+id/board_contact_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
